// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render AlertMessage danger correctly with props 1`] = `
<div
  className="d-flex alert pt-3 pb-3 mt-3 alert-danger"
>
  <i
    className="fa mr-2 mt-1 fa-exclamation-triangle"
  />
  <span>
    Alert advarsel
  </span>
</div>
`;

exports[`should render AlertMessage success correctly with props 1`] = `
<div
  className="d-flex alert pt-3 pb-3 mt-3 alert-success"
>
  <i
    className="fa mr-2 mt-1 fa-check"
  />
  <span>
    Alert suksess
  </span>
</div>
`;
